--- a/individual.ipynb
+++ b/individual.ipynb
@@ -2044,6 +2044,14 @@
     "**k-fold cross-validation** on the training set to get a more stable estimate\n",
     "of how well the model works.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "affd5e46-6344-4080-ad72-61f8684780eb",
+   "metadata": {},
+   "source": [
+    "https://github.com/13817586295jake-cmd/Problem-individual-project-"
+   ]
   }
  ],
  "metadata": {
